更新了部门code重复数据

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,23 @@
+Changes 10.2
+												2017-4-19
+	1、 去除台湾嘉义重复数据
+	2、 修改双台子，code为211102
+	3、 修改云安区，code为445303
+	4、 修改嘉黎县，code为542422
+	5、 修改工布江达县，code为540421     　
+	6、 修改米林县，code为540422
+	7、 修改墨脱县，code为540423
+	8、 修改波密县，code为540424
+	9、 修改察隅县，code为540425
+	10、修改朗县，code为540426
+	11、修改朗县，code为540422
+	12、注销掉嘉峪关市三个行政区
+长城、镜铁、雄关3个新区委员会（工作办公室），是在整合原城区工委（城区工作办公室）、郊区工委（郊区工作办公室）和工业园区管委会办公室社会管理职能的基础上组建的，作为市委、市政府的派出机构，县级建制，履行区一级党委、政府职能。区党委和区行政机构合署办公，职能上各有侧重，主要履行经济发展、市场监管、民生保障、社会管理、公共服务和党的建设等职能。
+长城、镜铁、雄关3个区，都不能设立区人民政府、不能具有区人民代表大会常务委员会、区政协。
+
+	手动更新了district-standard.sql。
+
+
 Changes 10.1
 												2017-4-12
 			修改拼音多音字错误，如重庆(zhongqing),长沙(zhangsha),修改不完全，主要更新了district-standard.sql。
